[package]
name = "gated"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["wayland"]}
log = "0.4.20"
rand = "0.9.0-alpha.0"
mlua = { version = "0.9.6", features = ["luau", "macros", "serialize", "send", "parking_lot"]}
serde = { version = "1.0.197", features = ["derive"] }
once_cell = "1.19.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
